--- a/templates/patient_all.html
+++ b/templates/patient_all.html
@@ -45,7 +45,10 @@
                         <th>Zip Code</th>
                         <th>Gender</th>
                         <th>Date of Birth</th>
-                        <th>Setting</th>
+                        <th>Race</th>
+                        <th>Insurance Type</th>
+                        <th>Mobile Contact</th>
+                        <th>Settings</th>
 
                     </tr>
 
@@ -59,6 +62,9 @@
                         <td>{{row.zip_code}} </td>
                         <td>{{row.gender}}</td>
                         <td>{{row.dob}}</td>
+                        <td>{{row.race}}</td>
+                        <td>{{row.insurance_type}}</td>
+                        <td>{{row.contact_mobile}}</td>
                         <td>
                             <a href="/update/{{row.mrn}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{row.mrn}}">Edit</a>
                             <a href="/delete/{{row.mrn}}" class="btn btn-danger btn-xs" onclick="return confirm('Are You Sure To Delete ?')">Delete</a>
@@ -68,7 +74,6 @@
                     </tr>
 
 
-                  <!-- Modal Edit Employee-->
 
 
                   
@@ -85,11 +90,11 @@
                                     <input type="text" class="form-control" name="mrn" value="{{row.mrn}}" readonly>
                                 </div>
                                 <div class="form-group">
-                                    <label>First name:</label>
+                                    <label>First Name:</label>
                                     <input type="text" class="form-control" name="first_name" value="{{row.first_name}}">
                                 </div>
                                 <div class="form-group">
-                                    <label>Last name:</label>
+                                    <label>Last Name:</label>
                                     <input type="text" class="form-control" name="last_name" value="{{row.last_name}}">
                                 </div>
                                 <div class="form-group">
@@ -99,6 +104,18 @@
                                 <div class="form-group">
                                     <label>Date of Birth:</label>
                                     <input type="text" class="form-control" name="dob" value="{{row.dob}}">
+                                </div>
+                                <div class="form-group">
+                                    <label>Race:</label>
+                                    <input type="text" class="form-control" name="race" value="{{row.race}}">
+                                </div>
+                                <div class="form-group">
+                                    <label>Insurance Type:</label>
+                                    <input type="text" class="form-control" name="insurance_type" value="{{row.insurance_type}}">
+                                </div> 
+                                <div class="form-group">
+                                    <label>Mobile Contact:</label>
+                                    <input type="text" class="form-control" name="contact_mobile" value="{{row.contact_mobile}}">
                                 </div>
                                 <div class="form-group">
                                     <button class="btn btn-primary" type="submit">Update</button>
@@ -123,7 +140,6 @@
 
 
 
-                  <!-- Modal Add Patient-->
 
 
         <div id="addpatient" class="modal fade" role="dialog">
@@ -158,6 +174,18 @@
                             <div class="form-group">
                                 <label> Date of Birth </label>
                                 <input type="text" class="form-control" name="dob" required="1">
+                            </div>
+                            <div class="form-group">
+                                <label>Race:</label>
+                                <input type="text" class="form-control" name="race" required="1">
+                            </div>
+                            <div class="form-group">
+                                <label>Insurance Type:</label>
+                                <input type="text" class="form-control" name="insurance_type" required="1">
+                            </div> 
+                            <div class="form-group">
+                                <label>Mobile Contact:</label>
+                                <input type="text" class="form-control" name="contact_mobile" required="1">
                             </div>
                             <div class="form-group">
                                 <button class="btn btn-primary" type="submit">Add Patient</button>
