--- a/templates/patient_details.html
+++ b/templates/patient_details.html
@@ -3,9 +3,6 @@
 {% block title %} Home {% endblock %}
 {% block body %}
 
-<!-- create a view with four containers, the first container is for demographics,
-the second container is for vitals, the third container is for allergies, and the fourth container is for medications -->
-
 <div class="container">
     <div class="row">
         <div class="col md-12">
@@ -45,6 +42,22 @@ the second container is for vitals, the third container is for allergies, and th
                                     <th> Gender </th>
                                     <td> {{patient_details.gender}}</td>
                                 </tr>
+                                <tr>
+                                    <th> DOB </th>
+                                    <td> {{patient_details.dob}}</td>
+                                </tr>
+                                <tr>
+                                    <th> Race </th>
+                                    <td> {{patient_details.race}}</td>
+                                </tr>
+                                <tr>
+                                    <th> Insurance Type </th>
+                                    <td> {{patient_details.insurance_type}}</td>
+                                </tr>
+                                <tr>
+                                    <th> Mobile Contact </th>
+                                    <td> {{patient_details.contact_mobile}}</td>
+                                </tr>
                             </table>
                         </div>
                         
@@ -73,7 +86,6 @@ the second container is for vitals, the third container is for allergies, and th
 
 
 
-                                <!-- MODEL WINDOW FOR EDITING -->
 
                                 <div id="modaleditcondition{{row.id}}" class="modal fade" role="dialog">
                                     <div class="modal-dialog">
@@ -99,12 +111,11 @@ the second container is for vitals, the third container is for allergies, and th
                                                     <input type="text" class="form-control" name="id" value="{{row.icd10_code}}" readonly>
                                                 </div>
 
-                                                <!-- create a drop down that shows db_conditions -->
+
                                                 <div class="form-group">
                                                     <label for="icd10_code">Condition Code</label>
                                                     <select class="form-control" name="icd10_code">
                                                         {% for row in db_conditions %}
-                                                        <!-- default option value is none -->
                                                             <option value="{{row.icd10_code}}" >{{row.icd10_code}} : {{row.icd10_description}}</option>
                                                         {% endfor %}
                                                     </select>
