--- a/templates/register_provider.html
+++ b/templates/register_provider.html
@@ -74,8 +74,8 @@
     
 <main class="form-signin w-100 m-auto">
 
-  <form action="{{ url_for('register_admin') }}" method="post">
-    <h1 class="h3 mb-3 fw-normal">Admin Account</h1>
+  <form action="{{ url_for('register_provider') }}" method="post">
+    <h1 class="h3 mb-3 fw-normal">Provider Account</h1>
 
 
     <div class="form-floating" style="padding: .2em">
@@ -98,7 +98,7 @@
     <br />
     
     <div class="form-group">
-      <button class="btn btn-primary" type="submit" value="Register">Create Admin Account</button>
+      <button class="btn btn-primary" type="submit" value="Register">Create Care Provider Account</button>
       <button class="btn btn-outline-primary" type="submit" value="GoBack"><a href="http://0.0.0.0/login">Go Back</button>
       <!-- <a href="{{ url_for('login') }}" class="btn btn-primary">Login</a> -->
 
