--- a/templates/register.html
+++ b/templates/register.html
@@ -82,7 +82,7 @@
       <select class="form-select" id="account_type" name="account_type">
         <option value="admin">Admin</option>
         <option value="patient">Patient</option>
-        <option value="provider">Care Provider</option>
+        <option value="careprovider">Care Provider</option>
       </select>
       <label for="floatingSelect">User Type</label>
     </div>
@@ -93,8 +93,7 @@
     <br />
     
     <div class="form-group">
-      <button class="btn btn-primary" type="submit" value="Next">Next</button>
-      <button class="btn btn-outline-primary" type="submit" value="Go Back"><a href="http://0.0.0.0/login"> Go Back </a></button>
+      <button class="btn btn-primary" type="submit" value="Proceed">Proceed</button>
     </div>
 
 
